# barrier

./: CMakeLists.txt
src/gui/: CMakeLists.txt  gui.pro
src/lib/common/: basic_types.h
src/lib/platform/: CMakeLists.txt  OSXScreen.mm
